<resources>
    <string name="app_name">SkillCinema</string>
    <string name="title_home" />
    <string name="title_dashboard" />
    <string name="title_notifications" />
    <string name="skillcinema">Skillcinema</string>
    <string name="premieres">Премьеры</string>
    <string name="skip">Пропустить</string>
    <string name="onboarding_1_text">"Узнавай о премьерах"</string>
    <string name="onboarding_2_text">Создавай коллекции</string>
    <string name="onboarding_3_text">Делись с друзьями</string>
    <string name="all">Все</string>
    <string name="showAll">Показать все</string>
    <string name="Premieres">Премьеры</string>
    <string name="Top250">Топ-250</string>
    <string name="Popular">Популярное</string>
    <string name="Series">Сериалы</string>
    <string name="Comedies">Комедии</string>
    <string name="Cartoons">Мультфильмы</string>
    <string name="already_watched">Уже просмотрено!</string>
    <string name="go_up_button">В начало</string>
    <string name="hour">ч</string>
    <string name="minutes">мин</string>
    <string name="actors_header">В фильме снимались</string>
    <string name="series_actors_header">В сериале снимались</string>
    <string name="other_staff_header">Над фильмом работали</string>
    <string name="series_other_staff_header">Над сериалом работали</string>
    <string name="gallery_header">Галерея</string>
    <string name="similar_header">Похожие фильмы</string>
    <string name="series_similar_header">Похожие сериалы</string>
    <string name="seasons_header">Сезоны и серии</string>
    <string name="load_error_message">При загрузке данных произошла ошибка</string>
    <string name="back">Назад</string>
    <string name="best">Лучшее</string>
    <string name="filmography_header">Фильмография</string>
    <string name="filmography_all">К списку ></string>
    <string name="WRITER">Сценарист</string>
    <string name="OPERATOR">Оператор</string>
    <string name="EDITOR">Редактор</string>
    <string name="COMPOSER">Композитор</string>
    <string name="PRODUCER_USSR">Продюсер</string>
    <string name="HIMSELF">Актер: играет самого себя</string>
    <string name="HERSELF">Актриса: играет саму себя</string>
    <string name="HRONO_TITR_MALE">Титры</string>
    <string name="HRONO_TITR_FEMALE">Титры</string>
    <string name="TRANSLATOR">Переводчик</string>
    <string name="DIRECTOR">Режиссер</string>
    <string name="DESIGN">Дизайнер</string>
    <string name="PRODUCER">Продюсер</string>
    <string name="ACTOR">Актер</string>
    <string name="VOICE_DIRECTOR">Звукорежиссер</string>
    <string name="UNKNOWN">Неизвестно</string>
    <string name="actors_full_title_1">В сериале снимались</string>
    <string name="actors_full_title_2">Над сериалом работали</string>
    <string name="actors_full_title_3">В фильме снимались</string>
    <string name="actors_full_title_4">Над фильмом работали</string>
    <string name="STILL">Кадры</string>
    <string name="SHOOTING">Со съемок</string>
    <string name="POSTER">Постеры</string>
    <string name="FAN_ART">Фан-арты</string>
    <string name="PROMO">Промо</string>
    <string name="CONCEPT">Концепт-арты</string>
    <string name="WALLPAPER">Обои</string>
    <string name="COVER">Обложки</string>
    <string name="SCREENSHOT">Скриншоты</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_to_collection">Добавить в коллекцию</string>
    <string name="create_collection">Создать свою коллекцию</string>
    <string name="hint_create_collection">Придумайте название для вашей коллекции</string>
    <string name="ready_button">Готово</string>
    <string name="collections">Коллекции</string>
    <string name="clean_collection">Очистить коллекцию</string>
    <string name="hint_search_view">Фильмы, актёры, режиссёры</string>
    <string name="text_not_found">К сожалению, по вашему запросу ничего не найдено</string>
    <string name="search_settings_header">Настройки поиска</string>
    <string name="to_show">Показывать</string>
    <string name="All_tab">Все</string>
    <string name="films_tab">Фильмы</string>
    <string name="series_tab">Сериалы</string>
    <string name="go_back"><![CDATA[<]]></string>
    <string name="country_settings">Страна</string>
    <string name="any_settings">Любая</string>
    <string name="genre_settings">Жанр</string>
    <string name="genre_settings_item">Любой</string>
    <string name="year_settings">Год</string>
    <string name="year_value_settings">с 1000 до 3000</string>
    <string name="rating_settings">Рейтинг</string>
    <string name="rating_settings_value">1 – 10</string>
    <string name="sort_settings">Сортировать</string>
    <string name="date_sort_by">Дата</string>
    <string name="popularity_sort_by">Популярность</string>
    <string name="rating_sort_by">Рейтинг</string>
    <string name="not_watched_settings">Не просмотрен</string>
    <string name="input_country">Введите страну</string>
    <string name="settings_period">Период</string>
    <string name="search_to_year">Искать в период до</string>
    <string name="search_year_from">Искать в период с</string>
    <string name="from_to"><![CDATA[< >]]></string>
    <string name="select">Выбрать</string>
    <string name="toast_year_selection_error">Год окончания должен быть раньше или равен году начала</string>

</resources>